src/java/ie/ucd/clops/dsl/parser/CLOParser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 /Users/fintan/workspace/clops/src/CLO.g 2009-07-28 15:56:16

  package ie.ucd.clops.dsl.parser; 
  
  import ie.ucd.clops.dsl.structs.*;
  import ie.ucd.clops.dsl.structs.ast.*;
  import ie.ucd.clops.dsl.OptionTypeFactory;
  import ie.ucd.clops.dsl.OptionType;
  import ie.ucd.clops.dsl.UnknownOptionTypeException;
  import ie.ucd.clops.dsl.parser.DSLParseException;
  import ie.ucd.clops.util.Pair;
  
  import java.util.LinkedList;
  import java.util.List;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class CLOParser extends AbstractParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SECTION_NAME", "NAME", "SECTION_ARGS", "STRING_CONSTANT", "SECTION_FORMAT", "SECTION_WHERE", "SECTION_FLY", "UNCHECKED_CODE_BLOCK", "SECTION_OVERRIDES", "SECTION_VALIDITY", "UNCHECKED_CODE", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "NEWLINE", "ALPHA", "ALPHANUMERIC", "UNDERSCORE", "DASH", "DIGIT", "INTEGER", "REAL", "LOWER", "UPPER", "WHITESPACE", "':'", "'{'", "','", "'}'", "'['", "'='", "']'", "';'", "'('", "')'", "'|'", "'*'", "'+'", "'?'", "'OR'", "'->'", "':='", "'requires'", "'=>'", "'||'", "'&&'", "'exclusive'"
    };
    public static final int T__29=29;
    public static final int SINGLE_LINE_COMMENT=15;
    public static final int T__28=28;
    public static final int UNCHECKED_CODE_BLOCK=11;
    public static final int EOF=-1;
    public static final int UNCHECKED_CODE=14;
    public static final int SECTION_WHERE=9;
    public static final int NAME=5;
    public static final int ALPHANUMERIC=19;
    public static final int DIGIT=22;
    public static final int INTEGER=23;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int SECTION_OVERRIDES=12;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int DASH=21;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int SECTION_FORMAT=8;
    public static final int WHITESPACE=27;
    public static final int UNDERSCORE=20;
    public static final int SECTION_ARGS=6;
    public static final int STRING_CONSTANT=7;
    public static final int MULTI_LINE_COMMENT=16;
    public static final int SECTION_FLY=10;
    public static final int ALPHA=18;
    public static final int REAL=24;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int NEWLINE=17;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int SECTION_VALIDITY=13;
    public static final int SECTION_NAME=4;
    public static final int LOWER=25;
    public static final int UPPER=26;

    // delegates
    // delegators


        public CLOParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CLOParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return CLOParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/fintan/workspace/clops/src/CLO.g"; }


      // Nothing now.



    // $ANTLR start "prog"
    // /Users/fintan/workspace/clops/src/CLO.g:35:1: prog : clo_specification EOF ;
    public final void prog() throws RecognitionException {
        try {
            // /Users/fintan/workspace/clops/src/CLO.g:41:7: ( clo_specification EOF )
            // /Users/fintan/workspace/clops/src/CLO.g:41:10: clo_specification EOF
            {
            pushFollow(FOLLOW_clo_specification_in_prog58);
            clo_specification();

            state._fsp--;

            match(input,EOF,FOLLOW_EOF_in_prog60); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "prog"


    // $ANTLR start "clo_specification"
    // /Users/fintan/workspace/clops/src/CLO.g:44:1: clo_specification : name_section args_section args_format_section ( where_section )? ( fly_section )? ( overrides_section )? ( validity_section )? ;
    public final void clo_specification() throws RecognitionException {
        try {
            // /Users/fintan/workspace/clops/src/CLO.g:44:20: ( name_section args_section args_format_section ( where_section )? ( fly_section )? ( overrides_section )? ( validity_section )? )
            // /Users/fintan/workspace/clops/src/CLO.g:44:23: name_section args_section args_format_section ( where_section )? ( fly_section )? ( overrides_section )? ( validity_section )?
            {
            pushFollow(FOLLOW_name_section_in_clo_specification86);
            name_section();

            state._fsp--;

            pushFollow(FOLLOW_args_section_in_clo_specification110);
            args_section();

            state._fsp--;

            pushFollow(FOLLOW_args_format_section_in_clo_specification134);
            args_format_section();

            state._fsp--;

            // /Users/fintan/workspace/clops/src/CLO.g:47:23: ( where_section )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==SECTION_WHERE) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /Users/fintan/workspace/clops/src/CLO.g:47:24: where_section
                    {
                    pushFollow(FOLLOW_where_section_in_clo_specification159);
                    where_section();

                    state._fsp--;


                    }
                    break;

            }

            // /Users/fintan/workspace/clops/src/CLO.g:48:23: ( fly_section )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==SECTION_FLY) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/fintan/workspace/clops/src/CLO.g:48:24: fly_section
                    {
                    pushFollow(FOLLOW_fly_section_in_clo_specification186);
                    fly_section();

                    state._fsp--;


                    }
                    break;

            }

            // /Users/fintan/workspace/clops/src/CLO.g:49:23: ( overrides_section )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==SECTION_OVERRIDES) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/fintan/workspace/clops/src/CLO.g:49:24: overrides_section
                    {
                    pushFollow(FOLLOW_overrides_section_in_clo_specification213);
                    overrides_section();

                    state._fsp--;


                    }
                    break;

            }

            // /Users/fintan/workspace/clops/src/CLO.g:50:23: ( validity_section )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==SECTION_VALIDITY) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/fintan/workspace/clops/src/CLO.g:50:24: validity_section
                    {
                    pushFollow(FOLLOW_validity_section_in_clo_specification240);
                    validity_section();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "clo_specification"


    // $ANTLR start "name_section"
    // /Users/fintan/workspace/clops/src/CLO.g:53:1: name_section : SECTION_NAME NAME ( ':' s= option_comment )? ;
    public final void name_section() throws RecognitionException {
        Token NAME1=null;
        CLOParser.option_comment_return s = null;


        try {
            // /Users/fintan/workspace/clops/src/CLO.g:55:15: ( SECTION_NAME NAME ( ':' s= option_comment )? )
            // /Users/fintan/workspace/clops/src/CLO.g:55:18: SECTION_NAME NAME ( ':' s= option_comment )?
            {
            match(input,SECTION_NAME,FOLLOW_SECTION_NAME_in_name_section275); 
            NAME1=(Token)match(input,NAME,FOLLOW_NAME_in_name_section277); 
             getDslInformation().setParserName((NAME1!=null?NAME1.getText():null)); 
            // /Users/fintan/workspace/clops/src/CLO.g:57:18: ( ':' s= option_comment )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==28) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/fintan/workspace/clops/src/CLO.g:57:20: ':' s= option_comment
                    {
                    match(input,28,FOLLOW_28_in_name_section317); 
                    pushFollow(FOLLOW_option_comment_in_name_section321);
                    s=option_comment();

                    state._fsp--;

                     getDslInformation().setParserDescription((s!=null?input.toString(s.start,s.stop):null)); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "name_section"


    // $ANTLR start "args_section"
    // /Users/fintan/workspace/clops/src/CLO.g:63:1: args_section : SECTION_ARGS ( arg_definition )+ ;
    public final void args_section() throws RecognitionException {
        try {
            // /Users/fintan/workspace/clops/src/CLO.g:65:15: ( SECTION_ARGS ( arg_definition )+ )
            // /Users/fintan/workspace/clops/src/CLO.g:65:18: SECTION_ARGS ( arg_definition )+
            {
            match(input,SECTION_ARGS,FOLLOW_SECTION_ARGS_in_args_section414); 
            // /Users/fintan/workspace/clops/src/CLO.g:65:31: ( arg_definition )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==NAME) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /Users/fintan/workspace/clops/src/CLO.g:65:32: arg_definition
            	    {
            	    pushFollow(FOLLOW_arg_definition_in_args_section417);
            	    arg_definition();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "args_section"


    // $ANTLR start "arg_definition"
    // /Users/fintan/workspace/clops/src/CLO.g:69:1: arg_definition : id= arg_name ':' '{' (a1= arg_regexp ( ',' a= arg_regexp )* )? '}' ( ( ':' '{' t= NAME '}' ) | ) ( ':' '[' pn1= property_name ( '=' pv1= property_value | ) ( ( ',' )? pn= property_name ( '=' pv= property_value | ) )* ']' )? ( ':' s= option_comment )? ;
    public final void arg_definition() throws RecognitionException {
        Token t=null;
        CLOParser.arg_name_return id = null;

        CLOParser.arg_regexp_return a1 = null;

        CLOParser.arg_regexp_return a = null;

        CLOParser.property_name_return pn1 = null;

        CLOParser.property_value_return pv1 = null;

        CLOParser.property_name_return pn = null;

        CLOParser.property_value_return pv = null;

        CLOParser.option_comment_return s = null;


         BasicOptionDescription option = new BasicOptionDescription(); 
        try {
            // /Users/fintan/workspace/clops/src/CLO.g:71:17: (id= arg_name ':' '{' (a1= arg_regexp ( ',' a= arg_regexp )* )? '}' ( ( ':' '{' t= NAME '}' ) | ) ( ':' '[' pn1= property_name ( '=' pv1= property_value | ) ( ( ',' )? pn= property_name ( '=' pv= property_value | ) )* ']' )? ( ':' s= option_comment )? )
            // /Users/fintan/workspace/clops/src/CLO.g:71:20: id= arg_name ':' '{' (a1= arg_regexp ( ',' a= arg_regexp )* )? '}' ( ( ':' '{' t= NAME '}' ) | ) ( ':' '[' pn1= property_name ( '=' pv1= property_value | ) ( ( ',' )? pn= property_name ( '=' pv= property_value | ) )* ']' )? ( ':' s= option_comment )?
            {
            pushFollow(FOLLOW_arg_name_in_arg_definition469);
            id=arg_name();

            state._fsp--;

             option.setId((id!=null?input.toString(id.start,id.stop):null));
                                 option.setSourceLocation(getSLoc((id!=null?((Token)id.start):null),(id!=null?((Token)id.stop):null))); 
            match(input,28,FOLLOW_28_in_arg_definition512); 
            match(input,29,FOLLOW_29_in_arg_definition514); 
            // /Users/fintan/workspace/clops/src/CLO.g:75:20: (a1= arg_regexp ( ',' a= arg_regexp )* )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==STRING_CONSTANT) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // /Users/fintan/workspace/clops/src/CLO.g:76:22: a1= arg_regexp ( ',' a= arg_regexp )*
                    {
                    pushFollow(FOLLOW_arg_regexp_in_arg_definition561);
                    a1=arg_regexp();

                    state._fsp--;

                     option.addPrefixRegexp((a1!=null?input.toString(a1.start,a1.stop):null)); 
                    // /Users/fintan/workspace/clops/src/CLO.g:78:22: ( ',' a= arg_regexp )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==30) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // /Users/fintan/workspace/clops/src/CLO.g:78:23: ',' a= arg_regexp
                    	    {
                    	    match(input,30,FOLLOW_30_in_arg_definition609); 
                    	    pushFollow(FOLLOW_arg_regexp_in_arg_definition613);
                    	    a=arg_regexp();

                    	    state._fsp--;

                    	     option.addPrefixRegexp((a!=null?input.toString(a.start,a.stop):null)); 

                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,31,FOLLOW_31_in_arg_definition705); 
            // /Users/fintan/workspace/clops/src/CLO.g:83:20: ( ( ':' '{' t= NAME '}' ) | )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==28) ) {
                int LA9_1 = input.LA(2);

                if ( (LA9_1==29) ) {
                    alt9=1;
                }
                else if ( (LA9_1==STRING_CONSTANT||LA9_1==32) ) {
                    alt9=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA9_0==NAME||LA9_0==SECTION_FORMAT) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // /Users/fintan/workspace/clops/src/CLO.g:84:20: ( ':' '{' t= NAME '}' )
                    {
                    // /Users/fintan/workspace/clops/src/CLO.g:84:20: ( ':' '{' t= NAME '}' )
                    // /Users/fintan/workspace/clops/src/CLO.g:84:22: ':' '{' t= NAME '}'
                    {
                    match(input,28,FOLLOW_28_in_arg_definition749); 
                    match(input,29,FOLLOW_29_in_arg_definition751); 
                    t=(Token)match(input,NAME,FOLLOW_NAME_in_arg_definition755); 
                    match(input,31,FOLLOW_31_in_arg_definition757); 
                     try { OptionType optionType = getOptionTypeFactory().getOptionType((t!=null?t.getText():null)); option.setType(optionType);
                                                 } catch(UnknownOptionTypeException e) { throw new DSLParseException(e.getMessage()); } 
                                           

                    }


                    }
                    break;
                case 2 :
                    // /Users/fintan/workspace/clops/src/CLO.g:90:24: 
                    {
                     OptionType optionType = getOptionTypeFactory().getDefaultOptionType(); option.setType(optionType); 

                    }
                    break;

            }

            // /Users/fintan/workspace/clops/src/CLO.g:92:20: ( ':' '[' pn1= property_name ( '=' pv1= property_value | ) ( ( ',' )? pn= property_name ( '=' pv= property_value | ) )* ']' )?
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==28) ) {
                int LA14_1 = input.LA(2);

                if ( (LA14_1==32) ) {
                    alt14=1;
                }
            }
            switch (alt14) {
                case 1 :
                    // /Users/fintan/workspace/clops/src/CLO.g:92:22: ':' '[' pn1= property_name ( '=' pv1= property_value | ) ( ( ',' )? pn= property_name ( '=' pv= property_value | ) )* ']'
                    {
                    match(input,28,FOLLOW_28_in_arg_definition894); 
                    match(input,32,FOLLOW_32_in_arg_definition896); 
                    pushFollow(FOLLOW_property_name_in_arg_definition921);
                    pn1=property_name();

                    state._fsp--;

                     Pair<String,String> property = null; 
                    // /Users/fintan/workspace/clops/src/CLO.g:95:22: ( '=' pv1= property_value | )
                    int alt10=2;
                    int LA10_0 = input.LA(1);

                    if ( (LA10_0==33) ) {
                        alt10=1;
                    }
                    else if ( (LA10_0==NAME||LA10_0==30||LA10_0==34) ) {
                        alt10=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 10, 0, input);

                        throw nvae;
                    }
                    switch (alt10) {
                        case 1 :
                            // /Users/fintan/workspace/clops/src/CLO.g:95:24: '=' pv1= property_value
                            {
                            match(input,33,FOLLOW_33_in_arg_definition971); 
                            pushFollow(FOLLOW_property_value_in_arg_definition975);
                            pv1=property_value();

                            state._fsp--;

                             property = new Pair<String,String>((pn1!=null?input.toString(pn1.start,pn1.stop):null), (pv1!=null?input.toString(pv1.start,pv1.stop):null)); 
                                                     getDslInformation().setPropertyValueLocation(property,getSLoc((pv1!=null?((Token)pv1.start):null),(pv1!=null?((Token)pv1.stop):null))); 

                            }
                            break;
                        case 2 :
                            // /Users/fintan/workspace/clops/src/CLO.g:99:24: 
                            {
                             property = new Pair<String,String>((pn1!=null?input.toString(pn1.start,pn1.stop):null), "true"); 
                                                     getDslInformation().setPropertyValueLocation(property,getSLoc((pn1!=null?((Token)pn1.start):null),(pn1!=null?((Token)pn1.stop):null))); 

                            }
                            break;

                    }

                     option.setProperty(property); 
                                           getDslInformation().setPropertyNameLocation(property,getSLoc((pn1!=null?((Token)pn1.start):null),(pn1!=null?((Token)pn1.stop):null))); 
                    // /Users/fintan/workspace/clops/src/CLO.g:104:22: ( ( ',' )? pn= property_name ( '=' pv= property_value | ) )*
                    loop13:
                    do {
                        int alt13=2;
                        int LA13_0 = input.LA(1);

                        if ( (LA13_0==NAME||LA13_0==30) ) {
                            alt13=1;
                        }


                        switch (alt13) {
                    	case 1 :
                    	    // /Users/fintan/workspace/clops/src/CLO.g:104:24: ( ',' )? pn= property_name ( '=' pv= property_value | )
                    	    {
                    	    // /Users/fintan/workspace/clops/src/CLO.g:104:24: ( ',' )?
                    	    int alt11=2;
                    	    int LA11_0 = input.LA(1);

                    	    if ( (LA11_0==30) ) {
                    	        alt11=1;
                    	    }
                    	    switch (alt11) {
                    	        case 1 :
                    	            // /Users/fintan/workspace/clops/src/CLO.g:104:24: ','
                    	            {
                    	            match(input,30,FOLLOW_30_in_arg_definition1120); 

                    	            }
                    	            break;

                    	    }

                    	    pushFollow(FOLLOW_property_name_in_arg_definition1125);
                    	    pn=property_name();

                    	    state._fsp--;

                    	    // /Users/fintan/workspace/clops/src/CLO.g:105:24: ( '=' pv= property_value | )
                    	    int alt12=2;
                    	    int LA12_0 = input.LA(1);

                    	    if ( (LA12_0==33) ) {
                    	        alt12=1;
                    	    }
                    	    else if ( (LA12_0==NAME||LA12_0==30||LA12_0==34) ) {
                    	        alt12=2;
                    	    }
                    	    else {
                    	        NoViableAltException nvae =
                    	            new NoViableAltException("", 12, 0, input);

                    	        throw nvae;
                    	    }
                    	    switch (alt12) {
                    	        case 1 :
                    	            // /Users/fintan/workspace/clops/src/CLO.g:105:26: '=' pv= property_value
                    	            {
                    	            match(input,33,FOLLOW_33_in_arg_definition1153); 
                    	            pushFollow(FOLLOW_property_value_in_arg_definition1157);
                    	            pv=property_value();

                    	            state._fsp--;

                    	             property = new Pair<String,String>((pn!=null?input.toString(pn.start,pn.stop):null), (pv!=null?input.toString(pv.start,pv.stop):null));
                    	                                       getDslInformation().setPropertyValueLocation(property,getSLoc((pv!=null?((Token)pv.start):null),(pv!=null?((Token)pv.stop):null))); 

                    	            }
                    	            break;
                    	        case 2 :
                    	            // /Users/fintan/workspace/clops/src/CLO.g:109:26: 
                    	            {
                    	             property = new Pair<String,String>((pn!=null?input.toString(pn.start,pn.stop):null), "true");
                    	                                       getDslInformation().setPropertyValueLocation(property,getSLoc((pn!=null?((Token)pn.start):null),(pn!=null?((Token)pn.stop):null))); 

                    	            }
                    	            break;

                    	    }

                    	     option.setProperty(property); 
                    	                             getDslInformation().setPropertyNameLocation(property,getSLoc((pn!=null?((Token)pn.start):null),(pn!=null?((Token)pn.stop):null))); 

                    	    }
                    	    break;

                    	default :
                    	    break loop13;
                        }
                    } while (true);

                    match(input,34,FOLLOW_34_in_arg_definition1335); 

                    }
                    break;

            }

            // /Users/fintan/workspace/clops/src/CLO.g:117:20: ( ':' s= option_comment )?
            int alt15=2;
            int LA15_0 = input.LA(1);
